--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,15 @@ yarn-error.log*
 # Ponder
 /generated/
 /.ponder/
+
+# IDE files
+.vscode/
+
+# Ignore data files created by running the Docker Compose setup locally
+/docker/data/
+/docker/parity/chains/
+/docker/parity/network/
+
+# Docker volumes and debug logs
+.postgres
+logfile
