--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ yarn-error.log*
 .DS_Store
 
 # Env files
-.env*.local
+.env
+.env.local
 
 # Ponder
 /generated/
@@ -28,3 +29,7 @@ yarn-error.log*
 # Docker volumes and debug logs
 .postgres
 logfile
+
+# Directory generated to store volume
+/db-data/
+/pgadmin-data/
