--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,22 @@
     "moduleResolution": "bundler",
     "module": "ESNext",
     "noEmit": true,
-    "lib": ["ES2022"],
+    "lib": [
+      "ES2015", "ES2016", "ES2017", "ES2018",
+      "ES2019", "ES2020","ES2021", "ES2022", "DOM"
+    ],
     "target": "ES2022",
 
     // Skip type checking for node modules
-    "skipLibCheck": true
+    "skipLibCheck": true,
+
+    // Additional
+    "incremental": false,
+    "noEmitOnError": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "pretty": false
   },
   "include": ["./**/*.ts"],
   "exclude": ["node_modules"]
