update factory address

--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,10 @@
 # RPCs
-LEVERABICA_RPC_URL=
+PHAROS_TESTNET_RPC_URL=
 
 # Database
 PGADMIN_DEFAULT_EMAIL=
 PGADMIN_DEFAULT_PASSWORD=
-POSTGRES_USER=user
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_HOST=localhost
 POSTGRES_PORT=15432
